v5.1.0 ??? January 2020
  - Added the 'minimum-glibc-version' project option to specify the minimum
    GLIBC version required by the project.  This is used to determine the
    correct platform tag to use for Linux wheels.

v5.0.1 19th December 2019
  - Bug fixes.

v5.0.0 4th October 2019
  - The release of SIP v5.